--- a/QuanLyTiecCuoi/MVVM/View/AddOrEditSanhWindow.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/AddOrEditSanhWindow.xaml
@@ -22,6 +22,8 @@
             <RowDefinition Height="Auto"/>
             <!-- Ghi chú -->
             <RowDefinition Height="Auto"/>
+            <!-- Hình Ảnh -->
+            <RowDefinition Height="Auto"/>
             <!-- Nút Lưu -->
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -59,9 +61,16 @@
         <TextBlock Grid.Row="5" Grid.Column="0" Text="Ghi chú:" FontSize="16" VerticalAlignment="Center" Margin="10,10,10,0"/>
         <TextBox Grid.Row="5" Grid.Column="1" FontSize="16" Height="30" Margin="0,10,10,0"
             Text="{Binding SanhInfo.GhiChu, UpdateSourceTrigger=PropertyChanged}"/>
-        
+
+        <!-- Hình Ảnh -->
+        <TextBlock Grid.Row="6" Grid.Column="0" Text="Hình ảnh:" FontSize="16" VerticalAlignment="Center" Margin="10,10,10,0"/>
+        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" Margin="0,10,10,0" VerticalAlignment="Center">
+            <TextBlock x:Name="ImageNameTextBlock" Text="{Binding SanhInfo.HinhAnh}" VerticalAlignment="Center" FontSize="14" Margin="0,0,0,0"/>
+            <Button x:Name="ChooseImageButton" Content="Chọn ảnh..." Width="100" Height="30" Click="btnChonAnh_Click"/>
+        </StackPanel>
+
         <!-- Nút Lưu -->
-        <Button Grid.Row="6" Grid.Column="1" Content="Lưu" Width="80" Height="30" FontSize="16"
+        <Button Grid.Row="7" Grid.Column="1" Content="Lưu" Width="80" Height="30" FontSize="16"
         HorizontalAlignment="Right" Margin="0,15,10,0" Click="btnSave_Click"/>
     </Grid>
 </Window>
