Commit cho an toàn

--- a/QuanLyTiecCuoi/MVVM/View/HoaDon/ChiTietHoaDonWindow.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/HoaDon/ChiTietHoaDonWindow.xaml
@@ -223,7 +223,8 @@
                 Grid.Row="3" 
                 Margin="0,0,70,0"
                 Content="In hóa đơn"
-                Style="{StaticResource ButtonStyle}"/>
+                Style="{StaticResource ButtonStyle}"
+                        Click="Button_Click" />
 
 
             </StackPanel>
