--- a/QuanLyTiecCuoi/App.xaml
+++ b/QuanLyTiecCuoi/App.xaml
@@ -6,12 +6,19 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ResourcesXAML/MainResource.xaml"/>
-
+                <ResourceDictionary Source="/ResourcesXAML/MainResource.xaml" />
                 <ResourceDictionary Source="/Theme/Styles/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBlockStyle.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Theme/Styles/ComboBoxStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <ImageSource x:Key="MaximizeMouseOverImg">pack://application:,,,/resources/images/controlbarimg/maximouseover.png</ImageSource>
+            <ImageSource x:Key="MinimizeMouseOverImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/minimize_mouseover.png</ImageSource>
+            <ImageSource x:Key="CloseMouseOverImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/close_mouseover.png</ImageSource>
+            <ImageSource x:Key="MinimizeImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/minimize.png</ImageSource>
+            <ImageSource x:Key="MaxiImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/maxi.png</ImageSource>
+            <ImageSource x:Key="CloseImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/close.png</ImageSource>
+            <ImageSource x:Key="ArrowDownImg">pack://application:,,,/QuanLyTiecCuoi;component/resources/images/controlbarimg/arrow-down.png</ImageSource>
         </ResourceDictionary>
          
     </Application.Resources>
