--- a/QuanLyTiecCuoi/App.xaml
+++ b/QuanLyTiecCuoi/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QuanLyTiecCuoi"
-             StartupUri="MainWindow.xaml">
+             StartupUri="/MVVM/View/HoaDon/HoaDonUserControl.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,6 +11,8 @@
                 <ResourceDictionary Source="/Theme/Styles/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBlockStyle.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Theme/Styles/PasswordBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Theme/Styles/DatePickerStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
          
