--- a/QuanLyTiecCuoi/MVVM/View/HoaDon/ChiTietHoaDonWindow.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/HoaDon/ChiTietHoaDonWindow.xaml
@@ -3,9 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:QuanLyTiecCuoi.MVVM.View.HoaDon"
         xmlns:controlBar="clr-namespace:QuanLyTiecCuoi.MVVM.View.ControlBar"
         mc:Ignorable="d"
+        DataContext="{StaticResource HoaDonViewModel}"
         Background="Transparent"
         Title="ChiTietHoaDonWindow" 
         Height="1000" Width="1600">
@@ -67,7 +69,7 @@
 
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Số lượng bàn:" Style="{StaticResource Header3Style}"/>
-                            <TextBlock Text="{Binding SoLuongBan}" Style="{StaticResource Header4Style}"/>
+                            <TextBlock Text="{Binding DATTIEC.SoLuongBan}" Style="{StaticResource Header4Style}"/>
                         </StackPanel>
                     </StackPanel>
 
@@ -76,17 +78,17 @@
                         Orientation="Vertical">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Tên cô dâu:" Style="{StaticResource Header3Style}"/>
-                            <TextBox DataContext="{Binding TenCoDau}" Style="{DynamicResource TextBoxDescribeStyle}"/>
+                            <TextBox DataContext="{Binding DATTIEC.TenCoDau}" Style="{DynamicResource TextBoxDescribeStyle}"/>
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Tên chú rể:" Style="{StaticResource Header3Style}"/>
-                            <TextBox DataContext="{Binding TenChuRe}" Style="{DynamicResource TextBoxDescribeStyle}"/>
+                            <TextBox DataContext="{Binding DATTIEC.TenChuRe}" Style="{DynamicResource TextBoxDescribeStyle}"/>
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Tiền đặt cọc:" Style="{StaticResource Header3Style}"/>
-                            <TextBlock Text="{Binding SoLuongBan}" Style="{StaticResource Header4Style}"/>
+                            <TextBlock Text="{Binding DATTIEC.TienDatCoc}" Style="{StaticResource Header4Style}"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
@@ -99,7 +101,7 @@
                     <RowDefinition Height="100"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="0.8*"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
@@ -132,12 +134,14 @@
                                         Margin="5"
                                         Text="Đơn giá bàn:"
                                         Style="{StaticResource Header3Style}"/>
+                                    <TextBlock Text="{Binding DonGiaBan}" Style="{StaticResource Header4Style}"/>
                                 </StackPanel>
-                                <StackPanel>
+                                <StackPanel Orientation="Horizontal">
                                     <TextBlock
                                         Margin="5"
                                         Text="Tổng tiền bàn:"
                                         Style="{StaticResource Header3Style}"/>
+                                    <TextBlock Text="{Binding TongTienBan}" Style="{StaticResource Header4Style}"/>
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
@@ -163,8 +167,105 @@
 
                             <TextBlock
                                 Text="Dịch vụ"
-                                Style="{StaticResource Header3Style}"></TextBlock>
+                                Style="{StaticResource Header3Style}"/>
+                            <Button
+                                Style="{StaticResource ButtonStyle}"
+                                Height="60"
+                                Width="200"
+                                
+                                HorizontalAlignment="Right"
+                                Margin="5"
+                                Content="Thêm"/>
 
+                            <ListView
+                                Grid.Row="1">
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn 
+                                            Width="auto" Header="STT" 
+                                            HeaderContainerStyle="{StaticResource GridViewTableHeaderStyle}">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock
+                                                        Style="{StaticResource Header6Style}"
+                                                        Text="{Binding MaCTDV, StringFormat='0000'}" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn 
+                                            Width="100"
+                                            Header="Mã DV"
+                                            HeaderContainerStyle="{StaticResource GridViewTableHeaderStyle}">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock
+                                                        Style="{StaticResource Header6Style}"
+                                                        Text="{Binding MaDichVu, StringFormat='0000'}" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn 
+                                            Width="140"
+                                            Header="Tên dịch vụ"
+                                            HeaderContainerStyle="{StaticResource GridViewTableHeaderStyle}">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock
+                                                        Style="{StaticResource Header6Style}"
+                                                        Text="{Binding DichVu.TenDichVu}" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn 
+                                            Width="150" Header="Đơn giá"
+                                            HeaderContainerStyle="{StaticResource GridViewTableHeaderStyle}">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock
+                                                        Style="{StaticResource Header6Style}"
+                                                        Text="{Binding DonGia}" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        
+                                        <GridViewColumn 
+                                            Width="130" Header="Số lượng"
+                                            HeaderContainerStyle="{StaticResource GridViewTableHeaderStyle}">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <xctk:IntegerUpDown
+                                                        Value="{Binding SoLuong}"
+                                                        Name="myUpDownControl" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn 
+                                            Width="140" Header="Thành tiền" 
+                                            HeaderContainerStyle="{StaticResource GridViewTableHeaderStyle}" >
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock
+                                                        Style="{StaticResource Header6Style}"
+                                                        Text="{Binding }" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+
+                                        <GridViewColumn 
+                                            Width="40" >
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <Button 
+                                                        Margin="-15,0,0,0" 
+                                                        Style="{StaticResource ButtonStyleDeleteBillInfor}"
+                                                        Command="{Binding DataContext.DeleteBillInfoCommand,RelativeSource={RelativeSource AncestorType=ListView}}"
+                                                        CommandParameter="{Binding}"></Button>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
                             <Grid 
                                 Margin="10"
                                 Grid.Row="2"
@@ -172,8 +273,9 @@
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock
                                         Margin="5"
-                                        Text="Đơn giá bàn:"
+                                        Text="Tổng tiền dịch vụ:"
                                         Style="{StaticResource Header3Style}"/>
+                                    <TextBlock Text="{Binding TongTienDV}" Style="{StaticResource Header4Style}"/>
                                 </StackPanel>
 
                             </Grid>
@@ -191,16 +293,23 @@
                         Text="Tổng tiền hóa đơn: "
                         Style="{StaticResource Header3Style}"/>
                     <TextBlock
-                        Text="{Binding TongTienHoaDon}"
+                        Text="{Binding TongTienHD}"
                         Style="{StaticResource Header4Style}"/>
                 </StackPanel>
 
-                <TextBlock 
+                <StackPanel
                     VerticalAlignment="Center"
+                    Orientation="Horizontal"
                     Margin="30,0"
-                    Grid.Row="1" Grid.Column="1"
-                    Text="{Binding}"
-                    Style="{StaticResource Header3Style}"/>
+                    Grid.Row="1" Grid.Column="1">
+
+                    <TextBlock 
+                        Text="Tiền phải thanh toán: "
+                        Style="{StaticResource Header3Style}"/>
+                    <TextBlock
+                        Text="{Binding TienPhaiThanhToan}"
+                        Style="{StaticResource Header4Style}"/>
+                </StackPanel>
 
 
             </Grid>
@@ -209,6 +318,7 @@
                 HorizontalAlignment="Left"
                 Margin="70,0"
                 Content="Lưu thay đổi"
+                Command="{Binding LuuThayDoiCommand}"
                 Style="{StaticResource ButtonStyle}"/>
 
             <StackPanel Grid.Row="3" HorizontalAlignment="Right" Orientation="Horizontal">
@@ -217,12 +327,14 @@
                 Grid.Row="3" 
                 Margin="0,0,70,0"
                 Content="Xác nhận thanh toán"
+                Command="{Binding ThanhToanCommand}"
                 Style="{StaticResource ButtonStyle}"/>
 
             <Button 
                 Grid.Row="3" 
                 Margin="0,0,70,0"
                 Content="In hóa đơn"
+                Command="{Binding InHoaDonCommand}"
                 Style="{StaticResource ButtonStyle}"/>
 
 
