--- a/QuanLyTiecCuoi/Theme/Styles/ButtonStyles.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/ButtonStyles.xaml
@@ -1,12 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
-    <ImageBrush x:Key="MinusIconSource" ImageSource="../../Resources/Images/ControlBarImg/minimize.png"/>
-    <ImageBrush x:Key="MinusIconMouseOverSource" ImageSource="../../Resources/Images/ControlBarImg/minimize_mouseover.png"/>
+
+    <ImageBrush x:Key="MinusIconSource" ImageSource="../../Resources/Images/ControlBarImg/minimize.png"></ImageBrush>
+    <ImageBrush x:Key="MinusIconMouseOverSource" ImageSource="../../Resources/Images/ControlBarImg/minimize_mouseover.png"></ImageBrush>
     <ImageBrush x:Key="CloseIconSource" ImageSource="../../Resources/Images/ControlBarImg/close.png"></ImageBrush>
     <ImageBrush x:Key="CloseIconMouseOverSource" ImageSource="../../Resources/Images/ControlBarImg/close_mouseover.png"></ImageBrush>
     <ImageBrush x:Key="MaxiIconSource" ImageSource="../../Resources/Images/ControlBarImg/Maxi.png"></ImageBrush>
     <ImageBrush x:Key="MaxiIconMouseOverSource" ImageSource="../../Resources/Images/ControlBarImg/MaxiMouseOver.png"></ImageBrush>
+    <ImageBrush x:Key="CloseIconBillInforSource" ImageSource="/Resources/Images/HoaDon/closeBill_Infor.png"></ImageBrush>
 
 
     <Style x:Key="ButtonMinimizeStyle" TargetType="Button">
@@ -138,4 +139,153 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="RadioButtonStyle" TargetType="RadioButton">
+        <Setter Property="Background" Value="LightGray"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="TextBlock.TextDecorations" Value="{x:Null}"/>
+        <Setter Property="Padding" Value="0,5"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="Height" Value="80"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RadioButton">
+                    <Border 
+                        x:Name="border" 
+                        Background="{TemplateBinding Background}" 
+                        Padding="{TemplateBinding Padding}">
+                        <ContentPresenter 
+                            x:Name="content"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="content" Property="TextElement.FontWeight" Value="Bold"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    <Style x:Key="ToggleButtonPassword" TargetType="ToggleButton">
+        <Setter Property="Width" Value="18"/>
+        <Setter Property="Height" Value="18"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ToggleButton">
+                    <Image 
+                        x:Name="image"
+                        Stretch="Fill"
+                        Source="../../Resources/Images/Login/hideIcon.png"/>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="image" Property="Source" Value="../../Resources/Images/Login/showIcon.png"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="LoginButtonStyle" TargetType="Button">
+        <Setter Property="Height" Value="48"/>
+        <Setter Property="Width" Value="300"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="ButtonBorder"
+                    Height="{TemplateBinding Height}"
+                    Width="{TemplateBinding Width}"
+                    BorderThickness="1"
+                    BorderBrush="Black"
+                    Background="#F3E5CF"
+                    CornerRadius="15">
+                        <TextBlock 
+                           FontFamily="Cambria"
+                            HorizontalAlignment="Center" VerticalAlignment="Center"
+                           Text="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}">
+                        </TextBlock>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ButtonBorder" Property="BorderThickness" Value="2"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseCaptured" Value="True">
+                            <Setter TargetName="ButtonBorder" Property="Background" Value="#FDE6C2"/>
+                            <Setter TargetName="ButtonBorder" Property="BorderThickness" Value="2" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ForgotPassWordStyle" TargetType="Button">
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="Margin" Value="0,10,10,0"/>
+        <Setter Property="FontStyle" Value="Italic"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="FontFamily" Value="Cambria"/>
+        <Setter Property="Opacity" Value="0.5"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+
+                    <TextBlock 
+                            FontFamily="Cambria"
+                            HorizontalAlignment="Center" VerticalAlignment="Center"
+                            Text="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}">
+                    </TextBlock>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Opacity" Value="1"/>
+                        </Trigger>
+
+                        <Trigger Property="IsMouseOver" Value="False">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
+
+
+                        <EventTrigger RoutedEvent="MouseLeftButtonDown">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="TextDecorations">
+                                        <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{x:Static TextDecorations.Underline}" />
+                                    </ObjectAnimationUsingKeyFrames>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    <Style x:Key="ButtonStyleDeleteBillInfor" TargetType="Button">
+        <Setter Property="Margin" Value="-10,0,0,0"/>
+        <Setter Property="Width" Value="25"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="BorderImg" 
+                        Background="{StaticResource CloseIconBillInforSource}"
+                        Height="{TemplateBinding Height}" 
+                        Width="{TemplateBinding Width}"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
