--- a/QuanLyTiecCuoi/Theme/Styles/TextBoxStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/TextBoxStyle.xaml
@@ -32,4 +32,37 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+
+    <Style x:Key="TextBoxStyle1" TargetType="TextBox">
+        <Setter Property="Width" Value="300"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Text" Value=""/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TextBox">
+                    <Border
+                        x:Name="BorderTBox"
+                        Background="#f9f2e7"
+                        Height="{TemplateBinding Height}"
+                        Width="{TemplateBinding Width}"
+                        BorderBrush="Black"
+                        BorderThickness="1"
+                        CornerRadius="15">
+                        <ScrollViewer Margin="10" x:Name="PART_ContentHost"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter TargetName="BorderTBox" Property="BorderThickness" Value="2" />
+                        </Trigger>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter TargetName="BorderTBox" Property="Background" Value="#FDE6C2"/>
+                            <Setter TargetName="BorderTBox" Property="BorderThickness" Value="2" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
