--- a/QuanLyTiecCuoi/App.xaml
+++ b/QuanLyTiecCuoi/App.xaml
@@ -2,13 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QuanLyTiecCuoi"
-             StartupUri="/MVVM/View/HoaDon/HoaDonUserControl.xaml">
+             ShutdownMode="OnLastWindowClose"
+             StartupUri="/MVVM/View/Login/LoginWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/ResourcesXAML/MainResource.xaml"/>
 
-                <ResourceDictionary Source="/Theme/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="/Theme/Styles/ButtonStyle.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBlockStyle.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/TextBoxStyle.xaml"/>
                 <ResourceDictionary Source="/Theme/Styles/PasswordBoxStyle.xaml"/>
