--- a/QuanLyTiecCuoi/MVVM/View/HoaDon/HoaDonUserControl.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/HoaDon/HoaDonUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="QuanLyTiecCuoi.MVVM.View.HoaDon.HoaDonUserControl"
+﻿<Page x:Class="QuanLyTiecCuoi.MVVM.View.HoaDon.HoaDonUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,9 +10,8 @@
              mc:Ignorable="d" 
              DataContext="{StaticResource HoaDonViewModel}"
              x:Name="TraCuuHoaDon"
-             Padding="40"
-             Background="White"
-             d:DesignHeight="1080" d:DesignWidth="1670">
+             Background="Transparent"
+             d:DesignHeight="1000" d:DesignWidth="1600">
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -22,7 +21,7 @@
     </i:Interaction.Triggers>
     <Border
         BorderBrush="#673500"
-        BorderThickness="3"
+        BorderThickness="2"
         CornerRadius="40"
         Background="#ffffee">
         <Grid>
@@ -32,12 +31,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                
-            <controlBar:ControlBarUserControl
-                Margin="40,40,40,0"
-                VerticalAlignment="Top"
-                HorizontalAlignment="Right" 
-                Height="auto" Width="auto"/>
+
             <TextBlock 
                 Text="Serenité Wedding"
                 Style="{StaticResource Header1Style}"/>
@@ -93,7 +87,7 @@
                         Margin="10" 
                         SelectedDate="{Binding LocNgayThanhToan}"
                         HorizontalAlignment="Right"
-                        FontSize="16" 
+                        FontSize="20" 
                         Width="auto">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="SelectedDateChanged">
@@ -205,4 +199,4 @@
             </Grid>
         </Grid>
     </Border>
-</UserControl>
+</Page>
