--- a/QuanLyTiecCuoi/Theme/Styles/ButtonStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/ButtonStyle.xaml
@@ -84,25 +84,28 @@
     </Style>
 
     <Style x:Key="ButtonStyle" TargetType="Button">
-        <Setter Property="Height" Value="70"/>
-        <Setter Property="Width" Value="400"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Width" Value="auto"/>
+        <Setter Property="Margin" Value="10"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
                     <Border x:Name="ButtonBorder"
-                        Height="{TemplateBinding Height}"
-                        Width="{TemplateBinding Width}"
+                        Height="auto"
+                        Width="auto"
                         BorderThickness="1"
                         BorderBrush="#603127"
-                        CornerRadius="40">
+                        CornerRadius="25">
                         <Border.Background>
                             <SolidColorBrush x:Name="SolidColor" Color="White" Opacity="100"></SolidColorBrush>
                         </Border.Background>
-                        <TextBlock FontSize="30"
-                               FontFamily="Cambria"
-                               Text="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}"
-                               VerticalAlignment="Center"
-                               HorizontalAlignment="Center">
+                        <TextBlock 
+                            Margin="15,5"
+                            FontSize="20"
+                            FontFamily="Cambria"
+                            Text="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center">
                         </TextBlock>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -145,11 +148,11 @@
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="TextBlock.TextDecorations" Value="{x:Null}"/>
-        <Setter Property="Padding" Value="0,5"/>
+        <Setter Property="Padding" Value="0,2.5"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Width" Value="250"/>
-        <Setter Property="Height" Value="80"/>
+        <Setter Property="Height" Value="60"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RadioButton">
@@ -288,4 +291,24 @@
         </Setter>
     </Style>
 
+    <Style x:Key="LogoutButtonStyle" TargetType="Button">
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="FontSize" Value="30"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontFamily" Value="Cambria"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="MouseLeftButtonDown">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation 
+                        Storyboard.TargetProperty="Opacity" 
+                        To="0.5" Duration="0:0:0.2" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
