--- a/QuanLyTiecCuoi/Theme/Styles/DatePickerStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/DatePickerStyle.xaml
@@ -1,23 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Style cho DatePicker -->
     <Style x:Key="CustomDatePickerStyle" TargetType="DatePicker">
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="FontSize" Value="20"/>
-        <Setter Property="Padding" Value="4"/>
+        <Setter Property="Padding" Value="0"/>
         <Setter Property="BorderBrush" Value="Gray"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Width" Value="auto"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="DatePicker">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         
@@ -27,9 +24,10 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="0,0,0,2"
                             Foreground="Black"
-                            Padding="5,0"
-                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+                            Padding="0"
+                            Width="auto"
+                            HorizontalContentAlignment="Center"
+                            VerticalContentAlignment="Center" />
 
                         <Button 
                             x:Name="PART_Button"
@@ -40,7 +38,7 @@
                             ClickMode="Press"
                             FontFamily="Segoe MDL2 Assets"
                             Content="&#xE787;"
-                            Margin="5,0,0,0"
+                            Margin="0,0,0,0"
                             FontSize="24"
                             Background="Transparent"
                             BorderThickness="0"
