--- a/QuanLyTiecCuoi/Theme/Styles/TextBlockStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/TextBlockStyle.xaml
@@ -3,16 +3,17 @@
     <Style x:Key="Header1Style" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="40"/>
-        <Setter Property="FontSize" Value="60"/>
+        <Setter Property="Margin" Value="40,10"/>
+        <Setter Property="FontSize" Value="50"/>
         <Setter Property="FontFamily" Value="Rage Italic"/>
     </Style>
 
     <Style x:Key="Header2Style" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="30"/>
-        <Setter Property="FontSize" Value="40"/>
+        <Setter Property="Margin" Value="30,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="30"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontFamily" Value="Cambria"/>
     </Style>
@@ -20,8 +21,8 @@
     <Style x:Key="Header3Style" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="15"/>
-        <Setter Property="FontSize" Value="30"/>
+        <Setter Property="Margin" Value="15,5"/>
+        <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontFamily" Value="Cambria"/>
     </Style>
@@ -30,8 +31,8 @@
     <Style x:Key="Header4Style" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="15"/>
-        <Setter Property="FontSize" Value="30"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontFamily" Value="Cambria"/>
     </Style>
 
@@ -43,25 +44,6 @@
         <Setter Property="FontFamily" Value="Cambria"/>
     </Style>
 
-    <Style x:Key="LogoutStyle" TargetType="TextBlock">
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="30"/>
-        <Setter Property="FontSize" Value="40"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontFamily" Value="Cambria"/>
-        <Style.Triggers>
-            <EventTrigger RoutedEvent="MouseLeftButtonDown">
-                <BeginStoryboard>
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="TextDecorations">
-                            <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="{x:Static TextDecorations.Underline}" />
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </BeginStoryboard>
-            </EventTrigger>
-        </Style.Triggers>
-    </Style>
 
     <Style x:Key="ErrorTextBlockStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="20" />
@@ -97,7 +79,7 @@
     </Style>
 
     <Style x:Key="GridViewTableHeaderStyle" TargetType="GridViewColumnHeader">
-        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="FontSize" Value="16"/>
         <Setter Property="Width" Value="auto"/>
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center"/>
