--- a/QuanLyTiecCuoi/Theme/Styles/TextBoxStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/TextBoxStyle.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="TextBoxDescribeStyle" TargetType="TextBox">
-        <Setter Property="FontSize" Value="20"></Setter>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="Width" Value="400"/>
+        <Setter Property="FontSize" Value="18"></Setter>
+        <Setter Property="Height" Value="auto"/>
+        <Setter Property="Width" Value="200"/>
         <Setter Property="AcceptsReturn" Value="True"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="Template">
@@ -14,6 +14,7 @@
                         BorderBrush="#603127" 
                         BorderThickness="1" 
                         CornerRadius="5"
+                        Margin="5"
                         Background="#f4f6ff"
                         Opacity="0.7">
                         <ScrollViewer x:Name="PART_ContentHost"/>
