--- a/QuanLyTiecCuoi/MVVM/View/HoaDon/HoaDonPage.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/HoaDon/HoaDonPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="QuanLyTiecCuoi.MVVM.View.HoaDon.HoaDonUserControl"
+﻿<Page x:Class="QuanLyTiecCuoi.MVVM.View.HoaDon.HoaDonPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
