--- a/QuanLyTiecCuoi/MVVM/View/ThemTiec.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/ThemTiec.xaml
@@ -20,10 +20,20 @@
                     <!-- Header (Không thay đổi) -->
                     <Grid Grid.Row="0" Margin="0 10">
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="4*"/>
                             <ColumnDefinition Width="0.5*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
+
+                        <Button Content="⮜" Width="50" Height="50" 
+                        FontSize="24" 
+                        VerticalAlignment="Center" 
+                        HorizontalAlignment="Left"
+                        Click="BackButton_Click"
+                        Margin="0 0 20 0"
+                        Grid.Column="0"
+                        Style="{StaticResource ButtonStyle}"/>
 
                         <TextBlock 
                         Text="Serenité Wedding" 
@@ -32,7 +42,7 @@
                         FontWeight="SemiBold" 
                         VerticalAlignment="Center"
                         Margin="20 0"
-                        Grid.Column="0"/>
+                        Grid.Column="1"/>
 
                         <Button 
                         Command="{Binding LuuCommand}"
@@ -42,7 +52,8 @@
                         Margin="0 0 40 0"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Grid.Column="2"/>
+                        Grid.Column="3"
+                        Style="{StaticResource ButtonStyle}"/>
                     </Grid>
 
                     <!-- Content -->
@@ -119,52 +130,62 @@
                                             <Setter Property="FontWeight" Value="SemiBold"/>
                                             <Setter Property="HorizontalAlignment" Value="Stretch"/>
                                         </Style>
+                                        <Style TargetType="Button" BasedOn="{StaticResource ButtonStyle}" />
                                     </StackPanel.Resources>
 
                                     <!-- Ngày đãi tiệc -->
-                                    <TextBlock Text="Ngày đãi tiệc"/>
+                                    
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
-                                        <Button x:Name="CalendarButton" Click="CalendarButton_Click" Width="50" Height="50" Content="📅"/>
+                                        <TextBlock Text="Ngày đãi tiệc"
+                                                   VerticalAlignment="Center"/>
+                                        <Button x:Name="CalendarButton" Click="CalendarButton_Click"
+                                                Width="50" Height="50" 
+                                                Content="📅" Style="{StaticResource ButtonStyle}"/>
                                         <Grid x:Name="CalendarOverlay" Background="#80000000" Visibility="Collapsed" >
                                             <Border Width="Auto" Height="Auto" Background="White" Padding="10" CornerRadius="10" HorizontalAlignment="Center" VerticalAlignment="Center">
                                                 <Calendar Name="MyCalendar" FontSize="30" SelectedDatesChanged="MyCalendar_SelectedDatesChanged" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                                             </Border>
                                         </Grid>
-
-                                        <TextBlock x:Name="SelectedDateText" Margin="10 0" VerticalAlignment="Center" FontSize="20"/>
                                     </StackPanel>
+                                    <TextBlock x:Name="SelectedDateText" Margin="10 0" VerticalAlignment="Center" FontSize="30"/>
 
                                     <!-- Ca -->
-                                    <TextBlock Text="Ca"/>
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
+                                        <TextBlock Text="Ca" VerticalAlignment="Center"/>
                                         <Button x:Name="ShiftButton" Click="ShiftButton_Click" Width="50" Height="50" Content="⌚"/>
                                         <Popup x:Name="ShiftPopup" PlacementTarget="{Binding ElementName=ShiftButton}" Placement="Bottom" StaysOpen="False">
                                             <Border BorderBrush="Gray" BorderThickness="1" Background="White">
                                                 <ComboBox Name="ShiftComboBox" Width="260" Height="40" FontSize="20" SelectionChanged="ShiftComboBox_SelectionChanged"/>
                                             </Border>
                                         </Popup>
-                                        <TextBlock x:Name="SelectedShiftText" Margin="10 0" VerticalAlignment="Center" FontSize="20"/>
                                     </StackPanel>
+                                    <TextBlock x:Name="SelectedShiftText" Margin="10 0" VerticalAlignment="Center" FontSize="20"/>
 
                                     <!-- Sảnh -->
-                                    <TextBlock Text="Sảnh"/>
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
+                                        <TextBlock Text="Sảnh" VerticalAlignment="Center"/>
                                         <Button x:Name="HallButton" Click="HallButton_Click" Width="50" Height="50" Content="🏛"/>
                                         <Popup x:Name="HallPopup" PlacementTarget="{Binding ElementName=HallButton}" Placement="Bottom" StaysOpen="False">
                                             <Border BorderBrush="Gray" BorderThickness="1" Background="White">
                                                 <ComboBox x:Name="HallComboBox" Width="260" Height="40" FontSize="20" SelectionChanged="HallComboBox_SelectionChanged"/>
                                             </Border>
                                         </Popup>
-                                        <TextBlock x:Name="SelectedHallText" Margin="10 0" VerticalAlignment="Center" FontSize="20"/>
                                     </StackPanel>
-
+                                    <TextBlock x:Name="SelectedHallText" Margin="10 0" VerticalAlignment="Center" FontSize="30"/>
+                                    
                                     <!-- Món ăn -->
-                                    <TextBlock Text="Món ăn"/>
-                                    <Button x:Name="MonAnButton" Width="50" Height="50" Click="MonAnButton_Click" Content="🍽" Margin="0 5" HorizontalAlignment="Left"/>
-
+                                    <StackPanel Orientation="Horizontal" Margin="0 5">
+                                        <TextBlock Text="Món ăn" VerticalAlignment="Center"/>
+                                        <Button x:Name="MonAnButton" Width="50" Height="50" Click="MonAnButton_Click" Content="🍽" Margin="0 5" HorizontalAlignment="Left"/>
+                                    </StackPanel>
+                                    <TextBlock x:Name="SelectedMonAnText" Margin="10 0" VerticalAlignment="Center" FontSize="30"/>
+                                    
                                     <!-- Dịch vụ -->
-                                    <TextBlock Text="Dịch vụ"/>
-                                    <Button x:Name="DichVuButton" Width="50" Height="50" Click="DichVuButton_Click" Content="💒" Margin="0 5" HorizontalAlignment="Left"/>
+                                    <StackPanel Orientation="Horizontal" Margin="0 5">
+                                        <TextBlock Text="Dịch vụ"/>
+                                        <Button x:Name="DichVuButton" Width="50" Height="50" Click="DichVuButton_Click" Content="💒" Margin="0 5" HorizontalAlignment="Left"/>
+                                    </StackPanel>
+                                    <TextBlock x:Name="SelectedDichVuText" Margin="10 0" VerticalAlignment="Center" FontSize="30"/>
                                 </StackPanel>
                             </Grid>
                         </Grid>
