--- a/QuanLyTiecCuoi/MVVM/View/DSLoaiSanhView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DSLoaiSanhView.xaml
@@ -9,22 +9,54 @@
       d:DesignHeight="1000" d:DesignWidth="1600"
       Title="DSLoaiSanhView">
 
-    <Page.DataContext>
-        <vm:LoaiSanhViewModel />
-    </Page.DataContext>
-
     <Border BorderBrush="Black" BorderThickness="3" CornerRadius="40" Margin="20">
         <Grid Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            
             <!-- Tiêu đề -->
-            <TextBlock Text="Danh Sách Loại Sảnh" FontSize="40" FontFamily="Cambria" FontWeight="Bold" Margin="10" />
+            <TextBlock Text="Danh Sách Loại Sảnh" FontSize="40" FontFamily="Cambria" FontWeight="Bold" Margin="10" Grid.Row="0" />
 
-            <!-- DataGrid để hiển thị danh sách sảnh -->
-            <DataGrid ItemsSource="{Binding DanhSachLoaiSanh}"
+            <!-- Bộ lọc loại sảnh -->
+            <Grid Margin="10,10,10,10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <!-- Cột cho "Giới thiệu" -->
+                    <ColumnDefinition Width="200"/>
+                    <!-- Cột cho "Tên Loại Sảnh" -->
+                    <ColumnDefinition Width="*"/>
+                    <!-- Cột cho "Đơn Giá Bán Tối Thiểu" -->
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Tìm kiếm theo: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria" Grid.Column="0" FontStyle="Italic"/>
+
+                <!-- Tên Loại Sảnh -->
+                <StackPanel Orientation="Horizontal" Margin="10,0,0,0" Grid.Column="1" >
+                    <TextBlock Text="Tên Loại Sảnh: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
+                    <TextBox Width="300" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria" 
+                             Text="{Binding FilterTenLoaiSanh, UpdateSourceTrigger=PropertyChanged}" />
+                </StackPanel>
+
+                <!-- Đơn Giá Bán Tối Thiểu -->
+                <StackPanel Orientation="Horizontal" Margin="10,0,0,0" Grid.Column="2" >
+                    <TextBlock Text="Đơn giá bàn: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
+                    <TextBox Width="300" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria" 
+                             Text="{Binding FilterDonGiaBanToiThieu, UpdateSourceTrigger=PropertyChanged}" />
+                </StackPanel>
+            </Grid>
+
+            <!-- DataGrid để hiển thị danh sách loại sảnh -->
+            <DataGrid ItemsSource="{Binding DanhSachLoaiSanhView}"
                       SelectedItem="{Binding SelectedLoaiSanh, Mode=TwoWay}"
                       AutoGenerateColumns="False" 
-                      Margin="10,70,10,70" 
+                      Margin="10" 
                       HorizontalAlignment="Stretch" 
                       VerticalAlignment="Stretch"
+                      Grid.Row="2"
                       FontSize="20" FontFamily="Cambria">
 
                 <DataGrid.Columns>
@@ -44,7 +76,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <Grid Margin="10" VerticalAlignment="Bottom">
+            <Grid Margin="10" VerticalAlignment="Bottom" Grid.Row="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2.5*" />
                     <ColumnDefinition Width="*" />
@@ -60,11 +92,11 @@
                 <Button Grid.Column="1" Content="Thêm Loại Sảnh" Height="40" Width="220" FontSize="20" FontFamily="Cambria" HorizontalAlignment="Right"
                     Command="{Binding AddLoaiSanhCommand}" Style="{StaticResource ButtonStyle}" Margin="10,0,10,0" />
 
-                <!-- Nút Sửa Sảnh -->
+                <!-- Nút Sửa Loại Sảnh -->
                 <Button Grid.Column="2" Content="Sửa Loại Sảnh" Height="40" Width="220" FontSize="20" FontFamily="Cambria" HorizontalAlignment="Right"
                     Command="{Binding EditLoaiSanhCommand}" Style="{StaticResource ButtonStyle}" Margin="10,0,10,0" />
 
-                <!-- Nút Xóa Sảnh -->
+                <!-- Nút Xóa Loại Sảnh -->
                 <Button Grid.Column="3" Content="Xóa Loại Sảnh" Height="40" Width="220" FontSize="20" FontFamily="Cambria" HorizontalAlignment="Right"
                     Command="{Binding DeleteLoaiSanhCommand}" Style="{StaticResource ButtonStyle}" Margin="10,0,10,0" />
             </Grid>
