--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/SuaTiecView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="QuanLyTiecCuoi.MVVM.View.DatTiec.ThemTiecView"
+﻿<Page x:Class="QuanLyTiecCuoi.MVVM.View.DatTiec.SuaTiecView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:QuanLyTiecCuoi.MVVM.View.DatTiec"
       mc:Ignorable="d"
       Background="White"
-      Title="ThemTiec">
+      Title="ChinhSuaTiec">
 
     <!-- Viewbox giúp co giãn toàn bộ giao diện theo kích thước khung -->
     <Viewbox Stretch="Uniform">
@@ -46,9 +46,9 @@
                         Grid.Column="1"/>
 
                         <Button 
-                        Command="{Binding LuuCommand}"
+                        Command="{Binding UpdateCommand}"
                         Click="LuuTiec"
-                        Content="Đặt tiệc" 
+                        Content="Cập nhật" 
                         FontSize="24"
                         Padding="20 5"
                         Margin="0 0 40 0"
@@ -68,7 +68,7 @@
 
                             <!-- Title -->
                             <TextBlock 
-                            Text="Biểu mẫu 2. Đặt Tiệc Cưới" 
+                            Text="Chỉnh Sửa Tiệc Cưới" 
                             FontSize="36" 
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
@@ -107,13 +107,13 @@
                                     <TextBox Text="{Binding TiecMoi.SDT}"/>
 
                                     <TextBlock Text="Tiền đặt cọc"/>
-                                    <TextBox Text="{Binding TiecMoi.TienDatCoc}" GotFocus="TextBox_GotFocus"/>
+                                    <TextBox Text="{Binding TiecMoi.TienDatCoc}"/>
 
                                     <TextBlock Text="Số lượng bàn"/>
-                                    <TextBox Text="{Binding TiecMoi.SoLuongBan}" GotFocus="TextBox_GotFocus"/>
+                                    <TextBox Text="{Binding TiecMoi.SoLuongBan}" />
 
                                     <TextBlock Text="Số bàn dự trữ"/>
-                                    <TextBox Text="{Binding TiecMoi.SoBanDuTru}" GotFocus="TextBox_GotFocus"/>
+                                    <TextBox Text="{Binding TiecMoi.SoBanDuTru}"/>
                                 </StackPanel>
 
                                 <!-- Right Form -->
@@ -135,15 +135,20 @@
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
                                         <TextBlock Text="Ngày đãi tiệc"
                                                    VerticalAlignment="Center"/>
+                                        <Button x:Name="editBtn"
+                                            Content="✏" Click="Edit_Click"/>
                                         <DatePicker
                                             Margin="20 0"
                                             Width="250"
                                             FontSize="26"
                                             VerticalAlignment="Center"
                                             x:Name="FilterDatePicker"
+                                            Visibility="Collapsed"
                                             SelectedDateChanged="FilterDatePicker_SelectedDateChanged"/>
                                     </StackPanel>
-                                    <TextBlock x:Name="SelectedDateText" Margin="10 0" VerticalAlignment="Center" FontSize="30"/>
+                                    <TextBlock x:Name="SelectedDateText" 
+                                               Margin="10 0" VerticalAlignment="Center" FontSize="30"
+                                               Text="{Binding TiecMoi.NgayDaiTiec}"/>
 
                                     <!-- Ca -->
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
@@ -152,11 +157,12 @@
                                         <Popup x:Name="ShiftPopup" PlacementTarget="{Binding ElementName=ShiftButton}" Placement="Bottom" StaysOpen="False">
                                             <Border BorderBrush="Gray" BorderThickness="1" Background="White">
                                                 <ComboBox Name="ShiftComboBox" Width="260" Height="40" FontSize="20" SelectionChanged="ShiftComboBox_SelectionChanged"/>
-                                               
                                             </Border>
                                         </Popup>
                                     </StackPanel>
-                                    <TextBlock x:Name="SelectedShiftText" Margin="10 0" VerticalAlignment="Center" FontSize="20"/>
+                                    <TextBlock x:Name="SelectedShiftText" 
+                                               Margin="10 0" VerticalAlignment="Center" FontSize="20"
+                                               Text="{Binding TiecMoi.MaCa}"/>
 
                                     <!-- Sảnh -->
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
@@ -168,7 +174,9 @@
                                             </Border>
                                         </Popup>
                                     </StackPanel>
-                                    <TextBlock x:Name="SelectedHallText" Margin="10 0" VerticalAlignment="Center" FontSize="30"/>
+                                    <TextBlock x:Name="SelectedHallText" Margin="10 0"
+                                               VerticalAlignment="Center" FontSize="30"
+                                               Text="{Binding TiecMoi.MaSanh}"/>
 
                                     <!-- Món ăn -->
                                     <StackPanel Orientation="Horizontal" Margin="0 5">
