--- a/QuanLyTiecCuoi/Theme/Styles/ComboBoxStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/ComboBoxStyle.xaml
@@ -126,4 +126,116 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+
+
+
+    <Style x:Key="ComboBoxStyle1" TargetType="{x:Type ComboBox}">
+        <Setter Property="Background" Value="Wheat"/>
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="Width" Value="300"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ComboBox">
+                    <Grid>
+                        <Border 
+                            x:Name="ComboBoxBorder"
+                            Background="White" 
+                            CornerRadius="10" 
+                            BorderBrush="#603721"
+                            BorderThickness="1"
+                            Height="{TemplateBinding Height}">
+                            <TextBlock 
+                                IsEnabled="True"
+                                Margin="11,0,25,0"
+                                IsHitTestVisible="False"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
+                                FontSize="15"
+                                Text="{TemplateBinding SelectionBoxItem}">
+                            </TextBlock>
+                        </Border>
+                        <TextBlock 
+                            x:Name="TextBlock"
+                            Margin="11,0,25,0"
+                            Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Tag}"
+                            VerticalAlignment="Center" 
+                            HorizontalAlignment="Left"
+                            FontSize="15"
+                            Visibility="Hidden"
+                            Opacity="0.5"
+                            Padding="15">
+                        </TextBlock>
+                        <ToggleButton x:Name="ToggleButton"
+                              Template="{DynamicResource MyToggleButtonTemplate}"
+                              ClickMode="Press"
+                              Focusable="False"
+                              Grid.Column="2"
+                              IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" 
+                              HorizontalAlignment="Right"
+                              VerticalAlignment="Center"></ToggleButton>
+
+                        <Popup 
+                            x:Name="Popup"
+                            IsOpen="{TemplateBinding IsDropDownOpen}"
+                            AllowsTransparency="True"
+                            Focusable="False"
+                            Placement="right"
+                            Width="auto"
+                            HorizontalOffset="-200"
+                            VerticalOffset="30"
+                            PopupAnimation="Slide">
+                            <Border 
+                                x:Name="PopupBorder"
+                                Background="White"
+                                BorderBrush="#603721"
+                                BorderThickness="1">
+                                <ScrollViewer Margin="4">
+                                    <StackPanel IsItemsHost="True" />
+                                </ScrollViewer>
+                            </Border>
+                        </Popup>
+                    </Grid>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger SourceName="ToggleButton" Property="IsPressed" Value="True">
+                            <Setter TargetName="ComboBoxBorder" Property="BorderBrush" Value="#603127"/>
+                            <Setter TargetName="ComboBoxBorder" Property="BorderThickness" Value="1"/>
+                        </Trigger>
+
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ComboBoxBorder" Property="BorderBrush" Value="#603127"/>
+                            <Setter TargetName="ComboBoxBorder" Property="BorderThickness" Value="1"/>
+                        </Trigger>
+                        <Trigger Property="SelectedIndex" Value="-1">
+                            <Setter TargetName="TextBlock" Property="Visibility" Value="Visible"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="Black"/>
+                <Setter Property="BorderThickness" Value="1"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <ControlTemplate x:Key="MyToggleButtonTemplate" TargetType="{x:Type ToggleButton}">
+        <Border Width="25" Height="25" 
+                Background="Transparent"
+                x:Name="ToggleBorder">
+            <Path
+                x:Name="ArrowIcon"
+                Data="M 0 0 L 4 4 L 8 0 Z"
+                Fill="Black"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center" />
+        </Border>
+    </ControlTemplate>
 </ResourceDictionary>
