--- a/QuanLyTiecCuoi/Theme/Styles/TextBoxStyle.xaml
+++ b/QuanLyTiecCuoi/Theme/Styles/TextBoxStyle.xaml
@@ -37,8 +37,8 @@
 
     <Style x:Key="TextBoxStyle1" TargetType="TextBox">
         <Setter Property="Width" Value="300"/>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Height" Value="auto"/>
+        <Setter Property="FontSize" Value="16"/>
         <Setter Property="Text" Value=""/>
         <Setter Property="Template">
             <Setter.Value>
